[project]
name = "reyserver"
version = "1.1.130"
description = "Backend server method set."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["rey", "reyxbo", "server", "backend", "API", "async", "asynchronous"]
authors = [
    {name = "Rey", email = "reyxbo@163.com"}
]
dependencies = [
    "fastapi[standard]",
    "fastapi-cache2[redis]",
    "reyclient",
    "reydb",
    "reykit",
    "sqladmin[full]",
    "uvicorn[standard]"
]

[project.urls]
Homepage = "https://www.reyxbo.com"
Repository = "https://github.com/reyxbo/reyserver-py.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
